--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>python</h1>
+					<img width=35% src="images/python-logo.png" style="background:none; border:none; box-shadow:none;"/>
 					<h3>编程语言</h3>
 					<p>
 						<small>Created by 黄弈廷</small>
@@ -51,6 +51,13 @@
 				<section>
 					<p>Guido van Rossum</p>
 					<img width=35% src="images/guido.png"/>
+				</section>
+
+				<section>
+					<h3>Facts</h3>
+					<p class="fragment">1989</p>
+					<p class="fragment">Guido van Rossum</p>
+                    <p class="fragment">Monty Python's Flying Circus</p>
 				</section>
 
 				<section>
@@ -156,6 +163,28 @@
 						</div>
 					</div>
 				</section>
+
+				<section>
+					<h3>谁在用Python</h3>
+					<p class="fragment">Goolge</p>
+					<p class="fragment">RedHat</p>
+					<p class="fragment">Instagram</p>
+					<p class="fragment">Dropbox</p>
+					<p class="fragment">Disqus</p>
+					<p class="fragment">豆瓣</p>
+					<p class="fragment">...More</p>
+				</section>
+
+                <section>
+                    <h3>各行各业</h3>
+                    <p class="fragment">科学计算: Scipy, Numpy, Matplotlib</p>
+                    <p class="fragment">人工智能</p>
+                    <p class="fragment">应用脚本: 3Ds Max, Maya, Blender</p>
+                    <p class="fragment">Dropbox</p>
+                    <p class="fragment">Disqus</p>
+                    <p class="fragment">豆瓣</p>
+                    <p class="fragment">...More</p>
+                </section>
 
 				<!-- Example of nested vertical slides -->
 				<section>
