--- a/index.html
+++ b/index.html
@@ -187,22 +187,31 @@
 
                 <section>
                     <h3>各行各业</h3>
-                    <p class="fragment">科学计算: Scipy, Numpy, Matplotlib</p>
-                    <p class="fragment">人工智能</p>
-                    <p class="fragment">大型应用软件的脚本语言: 3Ds Max, Maya, Blender, GIMP</p>
-					<p class="fragment">树莓派Raspberry pi</p>
+					<ul>
+                    <p class="fragment">科学计算：Scipy, Numpy, Matplotlib</p>
+                    <p class="fragment">人工智能，机器学习</p>
+                    <p class="fragment">大型应用软件的脚本语言：3Ds Max，Maya，Blender，GIMP</p>
+					<p class="fragment">树莓派 <a href="https://www.raspberrypi.org/">Raspberry PI</a></p>
                     <p class="fragment">翻墙：goagent</p>
+					</ul>
                 </section>
 
 				<section>
 					<h3>IT</h3>
+					<ul>
 					<p class="fragment">操作系统内置: 大多数的Linux发行版本，FreeBSD，OS X</p>
-					<p class="fragment">云计算: OpenStack</p>
-					<p class="fragment">自动化测试 TA： Robot Framework</p>
-					<p class="fragment">持续集成 CI：buildbot</p>
-					<p class="fragment">自动化部署与配置管理：Ansible, SaltStack</p>
-					<p class="fragment">web开发: Django</p>
-					<p class="fragment">PAAS开发: GAE, Heroku, SAE</p>
+					<p class="fragment">云计算: <a href="https://www.openstack.org">OpenStack</a></p>
+					<p class="fragment">自动化测试 TA： <a href="http://robotframework.org/">Robot Framework</a></p>
+					<p class="fragment">持续集成 CI：<a href="http://buildbot.net/">buildbot</a></p>
+					<p class="fragment">自动化部署与配置管理：
+						<a href="http://www.ansible.com/home">Ansible</a>，
+						<a href="http://saltstack.com/">SaltStack</a></p>
+					<p class="fragment">web开发: <a href="https://www.djangoproject.com/">Django</a></p>
+					<p class="fragment">PAAS开发:
+						<a href="https://cloud.google.com/appengine/">GAE</a>，
+						<a href="https://www.heroku.com/">Heroku</a>，
+						<a href="http://sae.sina.com.cn/">SAE</a></p>
+					</ul>
 				</section>
 
 				<section>
@@ -216,13 +225,15 @@
 
 				<section>
 					<h3>强大的内置库</h3>
+					<ul>
 					<p class="fragment">丰富的数据结构：dict，list，priority queue</p>
 					<p class="fragment">多线程，多进程</p>
 					<p class="fragment">文件系统操作</p>
 					<p class="fragment">字符文本处理：unicode，正则表达式，xml，json</p>
 					<p class="fragment">网络协议：http，smtp，telnet，ftp</p>
 					<p class="fragment">压缩加密算法：zlib，gzip，md5，sha1</p>
-					<p class="fragment">更多：GUI，日志，命令行解析，unit test框架，调试工具</p>
+					<p class="fragment">更多：GUI，日志，unit test框架，调试工具</p>
+					</ul>
 				</section>
 
 				<section>
@@ -234,17 +245,19 @@
 
                 <section>
                     <h2>Python 2 VS Python 3</h2>
+					<ul>
                     <p class="fragment">Python 2：将继续维护，但是不会有新的feature加入</p>
                     <p class="fragment">Python 3：不向后兼容，更多功能，更优的性能</p>
                     <p class="fragment">新项目应该选哪个版本呢？</p>
+					</ul>
                 </section>
 
 				<section>
 					<h2>示例1：计算器</h2>
 					<pre><code class="python">
-1+2
-5*55
-100/2.3
+1 + 2
+5 * 55
+(5 + 10) / 2.2
 
 import math
 
@@ -298,6 +311,22 @@ f.write(html2)
 f.close()
                     </code></pre>
                 </section>
+
+				<section>
+					<h3>学习资源</h3>
+					<ul>
+					<li>Coursera课程(中文字幕) <a href="https://www.coursera.org/course/interactivepython1">Python交互编程入门</a></li>
+					<li>Codecademy交互式教程 <a href="https://www.codecademy.com/tracks/python">英文</a></li>
+					<li>Python官方文档
+						<a href="https://www.python.org/doc/">英文</a>
+						<a href="http://www.pythondoc.com/#">中文</a>
+					</li>
+					<li>A Byte of Python
+						<a href="http://www.swaroopch.com/notes/python/">英文</a>
+						<a href="http://files.cnblogs.com/files/wangshide/A-Byte-of-Python3%28%E4%B8%AD%E6%96%87%E7%89%88%29.pdf">中文</a>
+					</li>
+					</ul>
+				</section>
 
                 <section>
                     <h1>Q&A</h1>
