--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <h3>各行各业</h3>
 					<ul>
                     <p class="fragment">科学计算：Scipy, Numpy, Matplotlib</p>
-                    <p class="fragment">人工智能，机器学习</p>
+                    <p class="fragment">人工智能，机器学习：Scikit-learn</p>
                     <p class="fragment">大型应用软件的脚本语言：3Ds Max，Maya，Blender，GIMP</p>
 					<p class="fragment">树莓派 <a href="https://www.raspberrypi.org/">Raspberry PI</a></p>
                     <p class="fragment">翻墙：goagent</p>
